[package]
name = "state_lock"
version = "0.1.0"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Xudong-Huang/state_lock.git"
homepage = "https://github.com/Xudong-Huang/state_lock.git"
documentation = "https://docs.rs/state_lock"
description = "state lock library for thread to acquire state"
readme = "README.md"
keywords = ["coroutine", "multi-thread"]
categories = ["concurrency"]
exclude = [".gitignore", ".travis.yml", "appveyor.yml", "benches/**/*"]

[dependencies]
log = "0.4"
may = "0.3"
indexmap = "1"
once_cell = "1"
inventory = "0.3"
may_waiter = "0.1"
intertrait = "0.2"
state_derive = { path = "state_derive" }

[dev-dependencies]
linkme = "0.2"
env_logger = "0.9"
